wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -12,4 +12,5 @@ Welcome to my research website.
 
 * [Teeth growth analysis](teeth.html)
 
+* [Rudy's github site](https://rudymendez1987.github.io/myproject/)
 
